fix[SectionContacts]: card_type nowrap

--- a/src/style/sections/SectionContacts.scss
+++ b/src/style/sections/SectionContacts.scss
@@ -113,6 +113,7 @@
         font-family: BlissPro;
         font-size: 10px;
         color: #fff;
+        white-space: nowrap;
       }
 
     }
